Philly Mega Program May5-6

--- a/src/app/hall-pass-print/hall-pass-print.component.html
+++ b/src/app/hall-pass-print/hall-pass-print.component.html
@@ -19,6 +19,6 @@
           <qr-code [value]="textForQRCode(participant)" [size]="75" [canvas]="true"></qr-code>
       </div>
     </div>
-    <img src="assets/Images/{{day}}_{{participant.seating}}.jpg" alt="">
+    <img src="assets/Images/{{day}}_{{participant.seating}}_Ph.jpg" alt="">
   </div>
 </div>
