--- a/src/app/id-print/id-print.component.html
+++ b/src/app/id-print/id-print.component.html
@@ -35,7 +35,7 @@
             </div>-->
         </div>
       </div>
-      <img src="assets/Images/{{participant.seating}}.jpg" alt="">
+      <img src="assets/Images/{{participant.seating}}_Ph.jpg" alt="">
     </div>
   </div>
 </div>
