--- a/src/app/id-print/id-print.component.css
+++ b/src/app/id-print/id-print.component.css
@@ -47,13 +47,16 @@ img {
 }
 
 .firstName {
-   width: 40vw;
+   width: 100%;
    font-size: 9.5vw;
    font-weight: 900;
    line-height: 9.5vw;
    font-family: 'Fira Sans', sans-serif;;
    text-align:center;
 
+}
+.firstLetter {
+   font-size: 1.2em;
 }
 .firstName > b {
    font-size: 8.6vw;
