--- a/src/app/id-print/id-print.component.css
+++ b/src/app/id-print/id-print.component.css
@@ -26,6 +26,16 @@ img {
 
 }
 
+
+.qrCode {
+   /* width: 10vw; */
+   width: 9vw;
+   height: 9vw;
+   position: absolute;
+   top: 18.6vw;
+   left: 2.1vw;
+}
+
 .content{
    position: absolute;
    height: 100%;
