--- a/src/app/id-print/id-print.component.html
+++ b/src/app/id-print/id-print.component.html
@@ -24,6 +24,9 @@
                 <span class="firstLetter">{{participant.LastName[0]}}</span>{{participant.LastName.slice(1) | uppercase}}
               </div>
             </div>
+            <div class="qrCode" #box *ngIf="participant.category === 'vol'">
+              <qr-code [value]="textForQRCode(participant)" [size]="75" [canvas]="true"></qr-code>
+          </div>
             <!--<div class="lastName">
             <strong>{{participant.lastName[0] | uppercase }}</strong>{{participant.lastName | slice:1:participant.firstName.length | uppercase}}
             </div>-->
