fix qr code on name tag

--- a/src/app/hall-pass-print/hall-pass-print.component.css
+++ b/src/app/hall-pass-print/hall-pass-print.component.css
@@ -21,6 +21,7 @@ qr-code:first-child {
 
 .qrCode {
     /* width: 10vw; */
+    background-color: aqua;
     width: 9vw;
     height: 9vw;
     position: absolute;
