--- a/src/app/hall-pass-print/hall-pass-print.component.css
+++ b/src/app/hall-pass-print/hall-pass-print.component.css
@@ -6,12 +6,12 @@ img {
 
 }
 
-qr-code:first-child {
+/* qr-code:first-child {
     height: 9.5vw !important;
     width: 9.5vw !important;
-}
+} */
 
-.body {
+.bodyHP {
    width : 87.5vw;
    /*margin-left: 0px !important;*/
    /*margin-right: 0px !important;*/
@@ -19,17 +19,16 @@ qr-code:first-child {
    margin-right: 6.25vw;
 }
 
-.qrCode {
+qr-code > img {
     /* width: 10vw; */
-    background-color: aqua;
-    width: 9vw;
-    height: 9vw;
+    width: 10.3vw !important;
+    height: 10.3vw !important;
     position: absolute;
-    top: 18.6vw;
-    left: 2.1vw;
+    top: 19.2vw;
+    left: 2vw;
 }
 
-.card{
+.cardHP{
    width: 43.75vw ;
    /*height: 100%;*/
    float: left;
@@ -37,19 +36,19 @@ qr-code:first-child {
 
 }
 
-.content{
+.contentHP{
    position: absolute;
    height: 100%;
    width: 43.75vw ;
 }
-.reg {
+.regHP {
     position: absolute;
     top: 24vw;
     left: 14.5vw;
     font-size: 1.5vw;
 }
 
-.name {
+.nameHP {
     position: absolute;
     top: 20.5vw;
     max-width: 25vw;
@@ -57,7 +56,7 @@ qr-code:first-child {
     margin-right: 12.5vw;
 }
 
-.firstName {
+.firstNameHP {
    font-size: 2.5vw;
    line-height: 2.5vw;
    font-family: 'Fira Sans', sans-serif;;
